<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
android:id="@+id/sewidget29"
android:layout_width="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_height="fill_parent" android:background="@drawable/blue_gradent_background" android:layout_gravity="center">
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:gravity="center" android:layout_height="fill_parent">
        <TextView android:id="@+id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/textView1" android:text="@string/selectDateRange" android:layout_marginTop="15dip"></TextView>
        <Spinner android:layout_below="@+id/textView2" android:layout_height="wrap_content" android:id="@+id/spinner1" android:layout_alignLeft="@+id/textView2" android:layout_width="fill_parent"></Spinner>
        <TextView android:layout_below="@+id/spinner1" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@+id/spinner1" android:text="@string/startDate" android:layout_marginLeft="5dip" android:layout_marginTop="15dip"></TextView>
        <EditText android:id="@+id/editText1" android:layout_height="wrap_content" android:inputType="date" android:layout_below="@+id/textView3" android:layout_alignLeft="@+id/textView3" android:layout_width="150dip">
            <requestFocus></requestFocus>
        </EditText>
        <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@+id/editText1" android:layout_toRightOf="@+id/editText1" android:layout_marginLeft="10dip" android:text="@string/endDate"></TextView>
        <EditText android:id="@+id/editText2" android:layout_height="wrap_content" android:inputType="date" android:layout_below="@+id/textView4" android:layout_alignLeft="@+id/textView4"  android:layout_width="150dip"></EditText>
        <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="TextView" android:layout_below="@+id/editText2" android:layout_alignLeft="@+id/editText2" android:layout_marginTop="15dip" android:textSize="32sp"></TextView>
        <TextView android:layout_height="wrap_content" android:textSize="32sp" android:layout_width="wrap_content" android:text="TextView" android:id="@+id/textView9" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/textView5" android:layout_alignLeft="@+id/textView5"></TextView>
        <TextView android:id="@+id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/textView9" android:layout_alignLeft="@+id/textView9" android:layout_alignRight="@+id/textView9" android:textSize="32sp" android:text="@string/blank"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="TextView" android:layout_below="@+id/textView11" android:layout_alignLeft="@+id/textView11" android:layout_alignRight="@+id/textView11" android:textSize="32sp" android:id="@+id/wordtTip"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="10dip" android:text="@string/worstTip" android:id="@+id/textView14" android:layout_toLeftOf="@+id/wordtTip" android:layout_alignTop="@+id/wordtTip" android:layout_alignBottom="@+id/wordtTip"></TextView>
        <Button android:text="@string/textMessage" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="15dip" android:id="@+id/button1" android:layout_toRightOf="@+id/button2" android:layout_alignTop="@+id/button2" android:layout_alignBottom="@+id/button2"></Button>
        <TextView android:id="@+id/textView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/textView11" android:layout_alignTop="@+id/textView11" android:layout_alignBottom="@+id/textView11" android:layout_marginTop="10dip" android:text="@string/averageTip"></TextView>
        <TextView android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/textView9" android:layout_alignTop="@+id/textView9" android:layout_alignBottom="@+id/textView9" android:layout_marginTop="10dip" android:text="@string/bestTip"></TextView>
        <TextView android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/textView5" android:layout_alignBottom="@+id/textView5" android:text="@string/tipsMade" android:layout_marginBottom="10dip"></TextView>
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/tipHistory" android:layout_alignParentTop="true" android:layout_marginLeft="110dip"></TextView>
        <Button android:text="@string/email" android:layout_height="wrap_content" android:layout_width="120dip" android:layout_marginRight="15dip" android:id="@+id/button2" android:layout_alignParentBottom="true"></Button>
    </RelativeLayout>

</FrameLayout>